[project]
name = "ml-dl-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade>=3.3.3",
    "gymnasium[classic-control,mujoco]>=1.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "tensorboard>=2.21.0",
    "tensorflow>=2.21.0",
    "tensorflow-probability>=0.25.0",
    "tf-keras>=2.21.0",
]
