[project]
name = "ml-dl-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade>=3.3.3",
    "gymnasium[box2d,classic-control,classiccontrol,mujoco]>=1.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "swig>=4.4.1",
    "tensorboard>=2.21.0",
    "tensorflow>=2.21.0",
    "tensorflow-probability>=0.25.0",
    "tf-keras>=2.21.0",
]

[project.scripts]
value_iteration = "Reinforcement_Learning.value_iteration:main"
tabular_q_learning = "Reinforcement_Learning.tabular_q_learning:main"
deep_q_learning = "Reinforcement_Learning.deep_q_learning:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["Reinforcement_Learning*"]
